--- a/CSS/Fylo-data-storage.css
+++ b/CSS/Fylo-data-storage.css
@@ -217,10 +217,12 @@ body {
 /* Start Background */
 
 body {
-    background-image: url("../images/bg-desktop.png");
+    background-image: url(../images/bg-desktop.png);
+    height: 100vh;
+    width: 100%;
+    background-size: contain;
+    background-position: bottom;
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: top;
 }
 
 @media (max-width: 767px) {
@@ -230,17 +232,3 @@ body {
 }
 }
 /* End Background */
-
-
-.color{
-
-    /* gradient */
-    color: hsl(6, 100%, 80%) to hsl(335, 100%, 65%);
-
-    /* Others */
-    color: 
-    hsl(243, 100%, 93%)
-    hsl(229, 7%, 55%)
-    hsl(228, 56%, 26%)
-    hsl(229, 57%, 11%);
-}
